--- a/04-kaardirakendused.Rmd
+++ b/04-kaardirakendused.Rmd
@@ -40,7 +40,7 @@ Kaardi **mõõtkava** näitab, kui palju reaalset objekti on vähendatud. Tavali
 
 Kui liigume suurelt mõõtkavalt väiksemale, peame andmeid loetavuse huvides üldistama ning valima, mida ja mis detailsusastmega esitada. Üldistada võib lihtsustades, siludes, ühendades jne.
 
-```{r leaflet, echo=F, message = F, fig.show="hold", fig.align="center"}
+```{r leaflet, echo=F, message = F, fig.show="hold", fig.align="center", warning=F}
 library(leaflet)
 library(leafem)
 library(dplyr)
@@ -51,7 +51,7 @@ leaflet() %>% addTiles() %>% addMarkers(lng = 26.722234, lat = 58.380094) %>% ad
 
 Kaartide kujunduslikest komponentidest räägime lähemalt siis, kui ise QGISis kaarte tegema hakkame, ent üldiselt tuleks kaartide kujunduses silmas pidada lihtsust ja arusaadavust. See tähendab, et kujundid, sümbolid, värvid jm peaksid olema kujutatava nähtusega kergesti seostatavad. Muidugi võib kaarti käsitleda ka kui omalaadi kunstiteost, mispuhul kokkuleppelised ja harjumuspärased kujutusviisid võivad jääda tagaplaanile.
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, warning=F}
 library(vembedr)
 library(htmltools)
 embed_url("https://youtu.be/rblfKREj50o?t=138")
@@ -98,7 +98,7 @@ knitr::include_graphics(here::here("imgs", "projektsiooniklassid.png"))
 
 ```
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, warning=F}
 library(vembedr)
 library(htmltools)
 embed_url("https://www.youtube.com/watch?v=vVX-PrBRtTY")
